--- a/aula/aula/src/main/resources/application.properties
+++ b/aula/aula/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/vlan?useTimezone=true&serverTimezone=UTC
 
 spring.datasource.username=root
-spring.datasource.password=diasmar
+spring.datasource.password=admin
 #altera o dialeto do hibernate para o mesmo do Mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
